bk_ida/gccida/c2/validate_replace_rtx_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:904:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:912:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:913:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v19; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:927:1: error: must use 'enum' tag to refer to type 'extraction_pattern'
extraction_pattern v33; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:930:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:933:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:935:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:935:5: error: use of undeclared identifier 'v41'
rtx v41; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:936:4: error: expected ';' after expression
rtx v42; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:936:5: error: use of undeclared identifier 'v42'
rtx v42; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:937:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v43; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:938:6: error: use of undeclared identifier 'fld'
rtx *fld; // r15 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:939:6: error: use of undeclared identifier 'v45'
rtx *v45; // r8 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:941:6: error: use of undeclared identifier 'v47'
rtx *v47; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:944:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode; // [rsp+Ch] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:945:4: error: expected ';' after expression
rtx v51; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:945:5: error: use of undeclared identifier 'v51'
rtx v51; // [rsp+10h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:950:6: error: use of undeclared identifier 'v56'
rtx *v56; // [rsp+40h] [rbp-38h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/recog.c:967:6: error: use of undeclared identifier 'v51'
|| ( v51 = v4, v12 = to, ( ( v8 ^ v11) & 0xFFFFFF) == 0) && ( v22 = rtx_equal_p( v4, from), to = v12, v4 = v51, v22) ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/validate_replace_rtx_1/src/obj/recog.o] Error 1
